--- a/contact me/index.html
+++ b/contact me/index.html
@@ -159,35 +159,42 @@
   © 2025 Ismail Abdullahi Idris
 </footer>
 
+<!-- Firebase SDK -->
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
+
 <script>
+  // Firebase config - replace with your own keys
+  const firebaseConfig = {
+    apiKey: "AIzaSyCqBs3z1sHmfoqO5-R6IH-epqbp9ypt9GE",
+    authDomain: "ismailjalam-a74e4.firebaseapp.com",
+    databaseURL: "https://ismailjalam-a74e4-default-rtdb.firebaseio.com",
+    projectId: "ismailjalam-a74e4",
+    storageBucket: "ismailjalam-a74e4.appspot.com",
+    messagingSenderId: "791455932737",
+    appId: "1:791455932737:web:452e30144d283124d541c0",
+    measurementId: "G-VCP1LJL56G"
+  };
+
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+  const database = firebase.database();
+
   const commentForm = document.getElementById('commentForm');
   const successMsg = document.getElementById('successMsg');
   const commentsList = document.getElementById('commentsList');
 
-  const FUNCTION_URL = "https://us-central1-ismailjalam-a74e4.cloudfunctions.net/addComment";
+  // Listen for new comments
+  const commentsRef = database.ref('comments');
+  commentsRef.on('child_added', (snapshot) => {
+    const data = snapshot.val();
+    const li = document.createElement('li');
+    li.innerHTML = `<strong>${data.name}</strong><br>${data.comment}`;
+    commentsList.prepend(li); // newest comment on top
+  });
 
-  async function loadComments() {
-    try {
-      const res = await fetch(FUNCTION_URL, { method: 'GET' });
-      const comments = await res.json();
-      commentsList.innerHTML = '';
-      comments.reverse().forEach(c => {
-        const li = document.createElement('li');
-        li.style.padding = "10px";
-        li.style.marginBottom = "10px";
-        li.style.background = "rgba(255,255,255,0.1)";
-        li.style.borderRadius = "8px";
-        li.innerHTML = `<strong>${c.name}</strong> <br>${c.comment}`;
-        commentsList.appendChild(li);
-      });
-    } catch(err) {
-      console.error("Error loading comments:", err);
-    }
-  }
-
-  loadComments();
-
-  commentForm.addEventListener('submit', async (e) => {
+  // Submit comment
+  commentForm.addEventListener('submit', (e) => {
     e.preventDefault();
     const name = document.getElementById('name').value.trim();
     const comment = document.getElementById('comment').value.trim();
@@ -197,20 +204,17 @@
       return;
     }
 
-    try {
-      await fetch(FUNCTION_URL, {
-        method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify({ name, comment })
-      });
+    database.ref('comments').push({
+      name: name,
+      comment: comment,
+      timestamp: Date.now()
+    }).then(()=>{
       successMsg.style.display = 'block';
       commentForm.reset();
-      loadComments();
       setTimeout(()=>{successMsg.style.display='none'},3000);
-    } catch(err) {
-      alert("Error sending comment: "+err.message);
-    }
+    }).catch(err=>alert('Error: '+err.message));
   });
 </script>
+
 </body>
 </html>
