--- a/portfolio/others/index.html
+++ b/portfolio/others/index.html
@@ -249,7 +249,13 @@
   <a href="accessibility-redesign.html" class="btn">View Project</a>
 </div>
   </section>
-  
+
+  <!-- 24. Voice UI & Conversational Design -->
+<div class="exercise-card">
+  <h3>24. Voice UI & Conversational Design</h3>
+  <p>Design intuitive and human-like voice interactions for digital assistants, integrating empathy, AI, and conversational UX principles for smarter, accessible experiences.</p>
+  <a href="voice-ui.html" class="btn">View Project</a>
+</div>
 
   <footer>
     © 2025 Ismail Abdullahi Idris
