--- a/portfolio/others/index.html
+++ b/portfolio/others/index.html
@@ -256,6 +256,7 @@
   <p>Design intuitive and human-like voice interactions for digital assistants, integrating empathy, AI, and conversational UX principles for smarter, accessible experiences.</p>
   <a href="voice-ui.html" class="btn">View Project</a>
 </div>
+  </section>
 
   <footer>
     © 2025 Ismail Abdullahi Idris
