--- a/portfolio/others/index.html
+++ b/portfolio/others/index.html
@@ -250,16 +250,13 @@
   </div>
 
   <!-- 24. Voice UI & Conversational Design -->
-  <div class="exercise-card">
-    <h3>24. Voice UI & Conversational Design</h3>
-    <p>Design intuitive and human-like voice interactions for digital assistants, integrating empathy, AI, and conversational UX principles for smarter, accessible experiences.</p>
-    <a href="voice-ui.html" class="btn">View Project</a>
-  </div>
-
-
-<footer>
-  © 2025 Ismail Abdullahi Idris
-</footer>
+<div class="exercise-card">
+  <h3>24. Voice UI & Conversational Design</h3>
+  <p>
+    Design intuitive and human-like voice interactions for digital assistants, integrating empathy, AI, and conversational UX principles for smarter, accessible experiences.
+  </p>
+  <a href="voice-ui-conversational.html" class="btn">View Project</a>
+</div>
 
 <footer>
   © 2025 Ismail Abdullahi Idris
