--- a/portfolio/images/index.html
+++ b/portfolio/images/index.html
@@ -58,6 +58,7 @@
 
     // Close modal by clicking outside image
     modal.addEventListener('click', e => { if(e.target===modal) closeModal(); });
+    <img src="images/photo1.jpg" alt="Photo 1">
   </script>
 
   <style>
