--- a/portfolio/images/index.html
+++ b/portfolio/images/index.html
@@ -3,19 +3,24 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Photo Gallery</title>
+  <title>Portfolio Gallery</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-100 font-sans p-8">
 
-  <h1 class="text-3xl font-bold mb-6 text-center">Photo Gallery</h1>
+  <h1 class="text-3xl font-bold mb-6 text-center">My Portfolio Gallery</h1>
 
   <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4">
-    <img src="images/photo1.jpg" alt="Photo 1" class="rounded shadow-lg cursor-pointer hover:scale-105 transition transform">
-    <img src="images/photo2.jpg" alt="Photo 2" class="rounded shadow-lg cursor-pointer hover:scale-105 transition transform">
-    <img src="images/photo3.jpg" alt="Photo 3" class="rounded shadow-lg cursor-pointer hover:scale-105 transition transform">
-    <img src="images/photo4.jpg" alt="Photo 4" class="rounded shadow-lg cursor-pointer hover:scale-105 transition transform">
-    <!-- Add more images here -->
+    <!-- Hotuna daga images/ -->
+    <img src="images/photo1.png" alt="Photo 1" class="rounded shadow-lg cursor-pointer hover:scale-105 transition transform">
+    <img src="images/photo2.png" alt="Photo 2" class="rounded shadow-lg cursor-pointer hover:scale-105 transition transform">
+    <img src="images/photo3.png" alt="Photo 3" class="rounded shadow-lg cursor-pointer hover:scale-105 transition transform">
+    <img src="images/photo4.png" alt="Photo 4" class="rounded shadow-lg cursor-pointer hover:scale-105 transition transform">
+
+    <!-- Hotuna daga images/Photo/ -->
+    <img src="images/Photo/photo5.png" alt="Photo 5" class="rounded shadow-lg cursor-pointer hover:scale-105 transition transform">
+    <img src="images/Photo/photo6.png" alt="Photo 6" class="rounded shadow-lg cursor-pointer hover:scale-105 transition transform">
+    <!-- Add more photos as needed -->
   </div>
 
   <!-- Modal -->
@@ -58,7 +63,6 @@
 
     // Close modal by clicking outside image
     modal.addEventListener('click', e => { if(e.target===modal) closeModal(); });
-    <img src="images/photo1.jpg" alt="Photo 1">
   </script>
 
   <style>
