--- a/portfolio/images/index.html
+++ b/portfolio/images/index.html
@@ -31,8 +31,8 @@
       'images/photo2.png',
       'images/photo3.png',
       'images/photo4.png',
-      'images/Photo/photo5.png',
-      'images/Photo/photo6.png'
+      'images/photo5.png',
+      'images/photo6.png'
       // Add new images here
     ];
 
