--- a/about-me/index.html
+++ b/about-me/index.html
@@ -3,98 +3,59 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>About Me - BrightLearn</title>
+  <title>About Me - Data Science & Analytics</title>
   <style>
-    /* ===== Base Styling ===== */
     body {
       margin: 0;
-      font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-      background: linear-gradient(135deg, #1e1e2f, #2c3e50);
-      color: #f0f4f8;
-      min-height: 100vh;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      padding: 30px 20px;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #f9f9f9;
+      color: #333;
+      line-height: 1.7;
     }
 
-    h1 {
-      color: #ffd700;
-      font-size: 2.2em;
-      text-shadow: 0 2px 8px rgba(0,0,0,0.4);
-      margin-bottom: 10px;
-      text-align: center;
+    section {
+      padding: 60px 20px;
     }
 
-    .subtitle {
-      color: #d0d0d0;
-      font-size: 1em;
-      text-align: center;
-      margin-bottom: 40px;
-      letter-spacing: 0.5px;
-    }
-
-    /* ===== About Section ===== */
-    .about-box {
-      max-width: 750px;
-      background: rgba(255, 255, 255, 0.08);
-      padding: 30px;
-      border-radius: 16px;
-      box-shadow: 0 8px 25px rgba(0,0,0,0.3);
-      text-align: center;
-      transition: transform 0.3s ease;
-    }
-
-    .about-box:hover {
-      transform: translateY(-5px);
-    }
-
-    .about-box p {
-      line-height: 1.8;
-      font-size: 1.05em;
-      color: #e6e6e6;
-    }
-
-    strong {
-      color: #ffd700;
+    .container {
+      max-width: 1000px;
+      margin: auto;
     }
 
     /* ===== Bio Card ===== */
     .bio-card {
-      margin-top: 40px;
-      background: rgba(255, 255, 255, 0.1);
-      padding: 25px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      background: linear-gradient(135deg, #e3f2fd, #bbdefb);
+      padding: 30px 20px;
       border-radius: 16px;
+      box-shadow: 0 8px 25px rgba(0,0,0,0.1);
       text-align: center;
-      box-shadow: 0 4px 20px rgba(0,0,0,0.2);
-      width: 100%;
-      max-width: 500px;
-      transition: transform 0.3s ease;
-    }
-
-    .bio-card:hover {
-      transform: scale(1.02);
+      margin-bottom: 50px;
+      opacity: 0;
+      transform: translateY(20px);
+      transition: all 0.8s ease;
     }
 
     .bio-card img {
-      width: 100px;
-      height: 100px;
+      width: 120px;
+      height: 120px;
       border-radius: 50%;
-      border: 3px solid #ffd700;
-      margin-bottom: 15px;
+      border: 3px solid #0d47a1;
       object-fit: cover;
+      margin-bottom: 15px;
     }
 
     .bio-card h2 {
-      color: #ffd700;
-      font-size: 1.4em;
+      color: #0d47a1;
       margin: 5px 0;
     }
 
     .bio-card p {
-      color: #ccc;
-      font-size: 0.95em;
+      color: #1565c0;
       margin-bottom: 15px;
+      font-weight: 500;
     }
 
     .bio-links a {
@@ -102,79 +63,252 @@
       margin: 6px;
       padding: 10px 16px;
       border-radius: 8px;
-      background-color: #ffd700;
-      color: #1a1a1a;
+      background-color: #0d47a1;
+      color: #fff;
       font-weight: 600;
       text-decoration: none;
       transition: all 0.3s ease;
     }
 
     .bio-links a:hover {
-      background-color: #ffec80;
+      background-color: #1565c0;
       transform: translateY(-2px);
     }
 
-    /* ===== Back Link ===== */
-    a.back-home {
+    /* ===== About Section ===== */
+    h2 {
+      font-size: 2.5em;
+      color: #0d47a1;
+      font-weight: bold;
+      margin-bottom: 25px;
+      opacity: 0;
+      transform: translateY(20px);
+      transition: all 0.8s ease;
+    }
+
+    h3 {
+      font-size: 1.8em;
+      color: #1565c0;
+      margin-bottom: 15px;
+      opacity: 0;
+      transform: translateY(20px);
+      transition: all 0.8s ease;
+    }
+
+    h4 {
+      font-size: 1.2em;
+      color: #1976d2;
+      margin-bottom: 10px;
+    }
+
+    p {
+      font-size: 1.1em;
+      margin-bottom: 20px;
+      opacity: 0;
+      transform: translateY(20px);
+      transition: all 0.8s ease;
+    }
+
+    ul {
+      margin-bottom: 20px;
+      padding-left: 20px;
+    }
+
+    li {
+      margin-bottom: 10px;
+    }
+
+    .skills-container {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 20px;
+      margin-bottom: 40px;
+      opacity: 0;
+      transform: translateY(20px);
+      transition: all 0.8s ease;
+    }
+
+    .skills-container div {
+      flex: 1 1 250px;
+      background: linear-gradient(135deg, #e3f2fd, #bbdefb);
+      padding: 20px;
+      border-radius: 12px;
+      text-align: center;
+      transition: transform 0.3s, box-shadow 0.3s;
+    }
+
+    .skills-container div:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 8px 20px rgba(0,0,0,0.15);
+    }
+
+    .skills-container div h4 {
+      margin-bottom: 10px;
+    }
+
+    .cta-button {
       display: inline-block;
-      margin-top: 40px;
-      color: #ffd700;
+      padding: 15px 30px;
+      background-color: #0d47a1;
+      color: #fff;
       text-decoration: none;
-      font-weight: 600;
-      transition: color 0.3s ease;
+      font-weight: bold;
+      border-radius: 8px;
+      transition: all 0.3s;
+      margin-top: 20px;
     }
 
-    a.back-home:hover {
-      color: #ffec80;
-      text-decoration: underline;
+    .cta-button:hover {
+      background-color: #1565c0;
+      transform: translateY(-3px);
     }
 
-    /* ===== Responsive ===== */
+    canvas {
+      background-color: #fff;
+      border-radius: 12px;
+      max-width: 100%;
+      height: 250px;
+      margin-bottom: 40px;
+      opacity: 0;
+      transform: translateY(20px);
+      transition: all 0.8s ease;
+    }
+
+    .fade-in.visible {
+      opacity: 1 !important;
+      transform: translateY(0) !important;
+    }
+
     @media (max-width: 600px) {
-      h1 {
-        font-size: 1.8em;
-      }
-      .about-box, .bio-card {
-        padding: 20px;
-      }
+      h2 { font-size: 2em; }
+      h3 { font-size: 1.5em; }
+      .skills-container { flex-direction: column; }
     }
   </style>
 </head>
 <body>
-  <h1>About Me</h1>
-  <p class="subtitle">Crafting ideas into creative digital experiences ✨</p>
 
-  <div class="about-box">
-    <p>
-      Hello! I’m <strong>Ismail Abdullahi Idris</strong> — a creative problem-solver with a passion for helping people and businesses grow through smart, digital-first solutions.
-      I hold a degree in <strong>Agricultural Science Education</strong> from the <strong>University of Maiduguri</strong>, and over time, I’ve developed practical experience in <strong>sales strategy</strong>, <strong>marketing</strong>, <strong>UX/UI design</strong>, and <strong>content creation</strong>.
-    </p>
-
-    <p>
-      I enjoy learning, building, and improving systems that make life easier for others. Whether it’s designing clean interfaces, creating engaging user experiences, or helping brands find their voice online — I love turning ideas into results.
-    </p>
-
-    <p>
-      Currently, I’m focused on expanding my digital design portfolio and connecting with clients who value creativity, clarity, and consistency in their projects.
-    </p>
-
-    <p>
-      Outside work, I enjoy reading about technology, innovation, and personal development — always finding new ways to merge creativity with purpose.
-    </p>
-  </div>
-
-  <div class="bio-card">
-    <img src="https://via.placeholder.com/100" alt="Profile Picture" />
-    <h2>Ismail Abdullahi Idris</h2>
-    <p>UX/UI Designer | Digital Creator | Growth Strategist</p>
-    <div class="bio-links">
-      <a href="mailto:ismailbrightlearn@gmail.com">Email</a>
-      <a href="https://linkedin.com" target="_blank">LinkedIn</a>
-      <a href="https://github.com" target="_blank">GitHub</a>
-      <a href="https://x.com" target="_blank">Twitter</a>
+  <!-- ===== Bio Card ===== -->
+  <div class="container">
+    <div class="bio-card fade-in">
+      <img src="https://via.placeholder.com/120" alt="Profile Picture">
+      <h2>Ismail Abdullahi Idris</h2>
+      <p>Data Analyst | Digital Creator</p>
+      <div class="bio-links">
+        <a href="mailto:Ismailjalam@gmail.com">Email</a>
+        <a href="https://linkedin.com" target="_blank">LinkedIn</a>
+        <a href="phone number" target="_08144683329">WhatsApp</a>
+        <a href="https://x.com" target="_blank">Twitter</a>
+      </div>
     </div>
   </div>
 
-  <a href="../index.html" class="back-home">← Back to Home</a>
+  <!-- ===== About Me Section ===== -->
+  <section id="about-me">
+    <div class="container">
+      <h2 class="fade-in">💻 Data Science Expertise</h2>
+      <p class="fade-in">
+        Data Science is a multidisciplinary field that applies scientific methods, processes, algorithms, and systems to extract knowledge and insights from structured and unstructured data. In essence, it transforms raw data into meaningful, actionable intelligence that drives informed decision-making.
+      </p>
+
+      <h3 class="fade-in">My Expertise and Skills (The Data Science Pipeline)</h3>
+      <p class="fade-in">
+        As a Data Scientist, I specialize in using modern techniques and tools to convert large volumes of raw data into actionable insights and predictive models. My work spans the full Data Science lifecycle:
+      </p>
+
+      <h4 class="fade-in">Data Acquisition & Preprocessing</h4>
+      <ul class="fade-in">
+        <li>Collecting, integrating, and cleaning data from multiple sources.</li>
+        <li>Handling missing values, detecting outliers, and transforming data to ensure accuracy and readiness for analysis.</li>
+      </ul>
+
+      <h4 class="fade-in">Exploratory Data Analysis (EDA)</h4>
+      <ul class="fade-in">
+        <li>Using Python libraries such as Pandas and NumPy to deeply investigate datasets.</li>
+        <li>Creating visualizations with Matplotlib and Seaborn to uncover hidden trends, patterns, and relationships.</li>
+      </ul>
+
+      <h4 class="fade-in">Machine Learning Model Development</h4>
+      <ul class="fade-in">
+        <li>Designing, training, and evaluating robust Machine Learning models for real-world problems.</li>
+        <li>Classification: Predicting categories (e.g., customer churn, disease diagnosis).</li>
+        <li>Regression: Forecasting continuous values (e.g., housing prices, stock trends).</li>
+        <li>Skilled in Scikit-learn, TensorFlow, and Keras frameworks.</li>
+      </ul>
+
+      <h4 class="fade-in">Model Deployment & Communication</h4>
+      <ul class="fade-in">
+        <li>Deploying functional ML models as web apps for real-time user interaction.</li>
+        <li>Experienced with platforms like Streamlit and Vercel to showcase projects effectively.</li>
+      </ul>
+
+      <h3 class="fade-in">Core Skills</h3>
+      <div class="skills-container fade-in">
+        <div>
+          <div style="font-size:2em; margin-bottom:10px;">📈</div>
+          <h4>Data Cleaning</h4>
+          <p>Pandas, NumPy, Excel</p>
+        </div>
+        <div>
+          <div style="font-size:2em; margin-bottom:10px;">📊</div>
+          <h4>Data Analysis</h4>
+          <p>Matplotlib, Seaborn, Power BI, Tableau</p>
+        </div>
+        <div>
+          <div style="font-size:2em; margin-bottom:10px;">🤖</div>
+          
+        <div>
+          <div style="font-size:2em; margin-bottom:10px;">🚀</div>
+          <h4>Deployment</h4>
+          <p>Streamlit, Vercel</p>
+        </div>
+      </div>
+
+      <h4 class="fade-in">Sample Project Metrics:</h4>
+      <canvas id="miniChart" class="fade-in"></canvas>
+
+      <h3 class="fade-in">My Goal</h3>
+      <p class="fade-in">
+        I aim to harness the power of data to help individuals and organizations make smarter, data-driven decisions, optimize operations, and achieve meaningful business outcomes.
+      </p>
+
+      <a href="#contact" class="cta-button fade-in">Contact Me</a>
+    </div>
+  </section>
+
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <script>
+    // Fade-in scroll effect
+    const faders = document.querySelectorAll('.fade-in');
+    const appearOptions = { threshold: 0.1, rootMargin: "0px 0px -50px 0px" };
+    const appearOnScroll = new IntersectionObserver(function(entries, observer) {
+      entries.forEach(entry => {
+        if(!entry.isIntersecting) return;
+        entry.target.classList.add('visible');
+        observer.unobserve(entry.target);
+      });
+    }, appearOptions);
+    faders.forEach(fader => appearOnScroll.observe(fader));
+
+    // Mini Chart Example
+    const ctx = document.getElementById('miniChart').getContext('2d');
+    const miniChart = new Chart(ctx, {
+      type: 'bar',
+      data: {
+        labels: ['EDA', 'ML Models', 'Reports', 'Dashboards', 'Deployments'],
+        datasets: [{
+          label: 'Projects Completed',
+          data: [25, 18, 15, 20, 12],
+          backgroundColor: '#1976d2'
+        }]
+      },
+      options: {
+        responsive: true,
+        plugins: { legend: { display: false } },
+        scales: { y: { beginAtZero: true } }
+      }
+    });
+  </script>
+
 </body>
 </html>
