--- a/portfolio/images/index.html
+++ b/portfolio/images/index.html
@@ -32,7 +32,9 @@
       'images/photo3.png',
       'images/photo4.png',
       'images/photo5.png',
-      'images/photo6.png'
+      'images/500_1.png',
+      'images/500_2.png',
+      'images/500_3.png'
       // Add new images here
     ];
 
