--- a/portfolio/others/index.html
+++ b/portfolio/others/index.html
@@ -83,6 +83,22 @@
 <body>
 
   <header>
+    <!-- Data Insight Article – LinkedIn -->
+<div class="exercise-card">
+  <h3>25. From Raw Data to Real Business Value (Article)</h3>
+  <p>
+    A practical article explaining how businesses, companies, and educational institutions can turn raw data into actionable insights for smarter decision-making and growth.
+  </p>
+  <a 
+    href="https://www.linkedin.com/pulse/from-raw-data-real-business-value-why-data-driven-decisions-idris-nknne"
+    class="btn"
+    target="_blank"
+    rel="noopener noreferrer"
+  >
+    Read Article
+  </a>
+</div>
+    
     <h1>UX Projects Hub</h1>
     <p>Click "View Project" to explore each exercise</p>
   </header>
