--- a/portfolio/others/index.html
+++ b/portfolio/others/index.html
@@ -83,9 +83,10 @@
 <body>
 
   <header>
+ 
     <!-- Data Insight Article – LinkedIn -->
 <div class="exercise-card">
-  <h3>25. From Raw Data to Real Business Value (Article)</h3>
+  <h3>From Raw Data to Real Business Value (Article)</h3>
   <p>
     A practical article explaining how businesses, companies, and educational institutions can turn raw data into actionable insights for smarter decision-making and growth.
   </p>
