--- a/portfolio/images/index.html
+++ b/portfolio/images/index.html
@@ -35,6 +35,11 @@
       'images/500_1.png',
       'images/500_2.png',
       'images/500_3.png'
+      'images/5000_3.png'
+  		'images/5000_2.png'
+  		'images/5000_1.png'
+  		'images/5000_4.png'
+    
       // Add new images here
     ];
 
